[package]
name = "virtualfs"
version = "0.1.0"
description = "`virtualfs` is a library for virtual file systems."
authors = ["Team MicroSandbox <team@microsandbox.dev>"]
repository = "https://github.com/microsandbox/monobase"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "virtualfs"
path = "lib/lib.rs"

[dependencies]
async-trait = "0.1"
pretty-error-debug = "0.3"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
getset = "0.1"
cfg-if = "1.0"
async-recursion = "1.1"
nfsserve = "0.10"
intaglio = "1.10"
uzers = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
clap = { version = "4.5", features = ["color", "derive"] }
tempfile = "3.15"
